@@ -4,6 +4,9 @@
 Broker:
 - Ensure that bridges verify certificates by default when using TLS.
 
+Client library:
+- Fix topic matching edge case.
+
 1.3.1 - 20140324
 ================
 
